fixed useEffect missing dependances and flickering on change of displayed cast list member

--- a/src/components/card-details/CastList.css
+++ b/src/components/card-details/CastList.css
@@ -1,8 +1,15 @@
-.cast,
-.cast-list {
+.cast {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
-.cast {
-  width: 90%;
+.cast-list {
+  display: flex;
+  justify-content: center;
+}
+
+.not-visible {
+  display: none;
 }
